--- a/index.html
+++ b/index.html
@@ -10,14 +10,61 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
             rel="stylesheet">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-            integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css"
+            integrity="sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
       <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
+      <header>
+            <nav class="nav-sidebar">
+                  <div class="logo-container">
+                        <i class="fa-solid fa-table-columns"></i>
+                        <p>Dashboard</p>
+                  </div>
+                  <div class="nav-main-links-container">
+                        <div class="link-item">
+                              <i class="fa-solid fa-house"></i>
+                              <a href="/">Home</a>
+                        </div>
+                        <div class="link-item">
+                              <i class="fa-solid fa-address-card"></i>
+                              <a href="/">Profile</a>
+                        </div>
+                        <div class="link-item">
+                              <i class="fa-solid fa-message"></i>
+                              <a href="/">Messages</a>
+                        </div>
+                        <div class="link-item">
+                              <i class="fa-solid fa-clock-rotate-left"></i>
+                              <a href="/">History</a>
+                        </div>
+                        <div class="link-item">
+                              <i class="fa-solid fa-clipboard"></i>
+                              <a href="/">Tasks</a>
+                        </div>
+                        <div class="link-item">
+                              <i class="fa-solid fa-people-group"></i>
+                              <a href="/">Communities</a>
+                        </div>
+                  </div>
+                  <div class="nav-secondary-links-container">
+                        <div class="link-item">
+                              <i class="fa-solid fa-gear"></i>
+                              <a href="/">Settings</a>
+                        </div>
+                        <div class="link-item">
+                              <i class="fa-solid fa-circle-question"></i>
+                              <a href="/">Support</a>
+                        </div>
+                        <div class="link-item">
+                              <i class="fa-solid fa-shield-halved"></i>
+                              <a href="/">Privacy</a>
+                        </div>
+                  </div>
+            </nav>
+      </header>
 </body>
 
 </html>
