Add HTML content for top bar

--- a/index.html
+++ b/index.html
@@ -64,6 +64,29 @@
                         </div>
                   </div>
             </nav>
+            <section class="top-bar">
+                  <div class="top-bar-item search-bar">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text" name="search-input" id="search-input" placeholder="Search...">
+                  </div>
+                  <div class="top-bar-item user-options">
+                        <i class="fa-solid fa-bell"></i>
+                        <img src="img/blank-profile-picture.png" alt="Profile picture">
+                        <p>Sean Roberts</p>
+                  </div>
+                  <div class="top-bar-item welcome-message-container">
+                        <img src="img/blank-profile-picture.png" alt="Profile picture">
+                        <div class="welcome-message">
+                              <p>Hello there,</p>
+                              <p>Sean Roberts (@sroberts)</p>
+                        </div>
+                  </div>
+                  <div class="top-bar-item page-options">
+                        <button type="button">New</button>
+                        <button type="button">Upload</button>
+                        <button type="button">Share</button>
+                  </div>
+            </section>
       </header>
 </body>
 
