Add HTML content for project cards section

--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
                   </div>
                   <div class="top-bar-item user-options">
                         <i class="fa-solid fa-bell"></i>
-                        <img src="img/blank-profile-picture.png" alt="Profile picture">
+                        <img class="user-options-profile-pic" src="img/blank-profile-picture.png" alt="Profile picture">
                         <p>Sean Roberts</p>
                   </div>
                   <div class="top-bar-item welcome-message-container">
-                        <img src="img/blank-profile-picture.png" alt="Profile picture">
+                        <img clas="welcome-message-profile-pic" src="img/blank-profile-picture.png"
+                              alt="Profile picture">
                         <div class="welcome-message">
                               <p>Hello there,</p>
                               <p>Sean Roberts (@sroberts)</p>
@@ -88,6 +89,57 @@
                   </div>
             </section>
       </header>
+      <main>
+            <section class="user-projects">
+                  <h1>Your Projects</h1>
+                  <div class="project-cards-container">
+                        <div class="project-card">
+                              <h2 class="project-title">Rock Paper Scissors</h2>
+                              <p class="project-description">A small game of rock paper scissors which can be played in
+                                    the browser and is implemented using JavaScript</p>
+                              <div class="project-options-container">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-share-nodes"></i>
+                              </div>
+                        </div>
+                        <div class="project-card">
+                              <h2 class="project-title">Landing Page</h2>
+                              <p class="project-description">This is and HTML/CSS project from The Odin Project which
+                                    involves creating a landing page for a website</p>
+                              <div class="project-options-container">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-share-nodes"></i>
+                              </div>
+                        </div>
+                        <div class="project-card">
+                              <h2 class="project-title">Etch-a-Sketch</h2>
+                              <p class="project-description">Less of an etch a sketch and more like a web version of MS
+                                    Paint</p>
+                              <div class="project-options-container">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-share-nodes"></i>
+                              </div>
+                        </div>
+                        <div class="project-card">
+                              <h2 class="project-title">Calculator</h2>
+                              <p class="project-description">A simple calculator app implemented with JavaScript</p>
+                              <div class="project-options-container">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-share-nodes"></i>
+                              </div>
+                        </div>
+                        <div class="project-card">
+                              <h2 class="project-title">Sign-Up Form</h2>
+                              <p class="project-description">A basic sign-up form to practice some with HTML forms and
+                                    some more CSS concepts</p>
+                              <div class="project-options-container">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-share-nodes"></i>
+                              </div>
+                        </div>
+                  </div>
+            </section>
+      </main>
 </body>
 
 </html>
