Add HTML content for announcements section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="nav-sidebar">
                   <div class="logo-container">
                         <i class="fa-solid fa-table-columns"></i>
-                        <p>Dashboard</p>
+                        <h1>Dashboard</h1>
                   </div>
                   <div class="nav-main-links-container">
                         <div class="link-item">
@@ -91,10 +91,10 @@
       </header>
       <main>
             <section class="user-projects">
-                  <h1>Your Projects</h1>
+                  <h2>Your Projects</h2>
                   <div class="project-cards-container">
                         <div class="project-card">
-                              <h2 class="project-title">Rock Paper Scissors</h2>
+                              <h3 class="project-title">Rock Paper Scissors</h3>
                               <p class="project-description">A small game of rock paper scissors which can be played in
                                     the browser and is implemented using JavaScript</p>
                               <div class="project-options-container">
@@ -103,7 +103,7 @@
                               </div>
                         </div>
                         <div class="project-card">
-                              <h2 class="project-title">Landing Page</h2>
+                              <h3 class="project-title">Landing Page</h3>
                               <p class="project-description">This is and HTML/CSS project from The Odin Project which
                                     involves creating a landing page for a website</p>
                               <div class="project-options-container">
@@ -112,7 +112,7 @@
                               </div>
                         </div>
                         <div class="project-card">
-                              <h2 class="project-title">Etch-a-Sketch</h2>
+                              <h3 class="project-title">Etch-a-Sketch</h3>
                               <p class="project-description">Less of an etch a sketch and more like a web version of MS
                                     Paint</p>
                               <div class="project-options-container">
@@ -121,7 +121,7 @@
                               </div>
                         </div>
                         <div class="project-card">
-                              <h2 class="project-title">Calculator</h2>
+                              <h3 class="project-title">Calculator</h3>
                               <p class="project-description">A simple calculator app implemented with JavaScript</p>
                               <div class="project-options-container">
                                     <i class="fa-regular fa-star"></i>
@@ -129,13 +129,33 @@
                               </div>
                         </div>
                         <div class="project-card">
-                              <h2 class="project-title">Sign-Up Form</h2>
+                              <h3 class="project-title">Sign-Up Form</h3>
                               <p class="project-description">A basic sign-up form to practice some with HTML forms and
                                     some more CSS concepts</p>
                               <div class="project-options-container">
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-solid fa-share-nodes"></i>
                               </div>
+                        </div>
+                  </div>
+            </section>
+            <section class="announcements">
+                  <h2>Announcements</h2>
+                  <div class="anouncements-container">
+                        <div class="announcement-item">
+                              <h3 class="announcement-title">Site Maintenance</h3>
+                              <p class="announcement-text">Site maintenance will occur at 6:00 AM each morning. Be sure
+                                    to submit your support tickets claiming the site isn't working by 6:05 AM.</p>
+                        </div>
+                        <div class="announcement-item">
+                              <h3 class="announcement-title">Password Change</h3>
+                              <p class="announcement-text">Current passwords will soon expire. Change your password
+                                    within 7 days or you will be locked out of your account. Or don't change it like you
+                                    always do and blame me for it.</p>
+                        </div>
+                        <div class="announcement-item">
+                              <h3 class="announcement-title">Updated Privacy Policy</h3>
+                              <p class="announcement-text">Corporate has found new ways to track what you're doing at work. Read through the update privacy policy <a href="/">here</a></p> to learn more.
                         </div>
                   </div>
             </section>
