Add HTML content for trending section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,39 @@
                         </div>
                   </div>
             </section>
+            <section class="trending">
+                  <h2>Trending Users</h2>
+                  <div class="trending-users-container">
+                        <div class="trending-user-item">
+                              <img src="img/blank-profile-picture.png" alt="Profile picture">
+                              <div class="trending-user-info">
+                                    <p class="trending-user-name">@tegan</p>
+                                    <p class="trending-user-title">World Peace Builder</p>
+                              </div>
+                        </div>
+                        <div class="trending-user-item">
+                              <img src="img/blank-profile-picture.png" alt="Profile picture">
+                              <div class="trending-user-info">
+                                    <p class="trending-user-name">@morgan</p>
+                                    <p class="trending-user-title">Super Cool Project</p>
+                              </div>
+                        </div>
+                        <div class="trending-user-item">
+                              <img src="img/blank-profile-picture.png" alt="Profile picture">
+                              <div class="trending-user-info">
+                                    <p class="trending-user-name">@kendall</p>
+                                    <p class="trending-user-title">Life Changing App</p>
+                              </div>
+                        </div>
+                        <div class="trending-user-item">
+                              <img src="img/blank-profile-picture.png" alt="Profile picture">
+                              <div class="trending-user-info">
+                                    <p class="trending-user-name">@alex</p>
+                                    <p class="trending-user-title">No Traffic Maker</p>
+                              </div>
+                        </div>
+                  </div>
+            </section>
       </main>
 </body>
 
