Restructure HTML to make easier use of CSS grid

--- a/index.html
+++ b/index.html
@@ -17,79 +17,78 @@
 </head>
 
 <body>
-      <header>
-            <nav class="nav-sidebar">
-                  <div class="logo-container">
-                        <i class="fa-solid fa-table-columns"></i>
-                        <h1>Dashboard</h1>
+
+      <nav class="nav-sidebar">
+            <div class="logo-container">
+                  <i class="fa-solid fa-table-columns"></i>
+                  <h1>Dashboard</h1>
+            </div>
+            <div class="nav-main-links-container">
+                  <div class="link-item">
+                        <i class="fa-solid fa-house"></i>
+                        <a href="/">Home</a>
                   </div>
-                  <div class="nav-main-links-container">
-                        <div class="link-item">
-                              <i class="fa-solid fa-house"></i>
-                              <a href="/">Home</a>
-                        </div>
-                        <div class="link-item">
-                              <i class="fa-solid fa-address-card"></i>
-                              <a href="/">Profile</a>
-                        </div>
-                        <div class="link-item">
-                              <i class="fa-solid fa-message"></i>
-                              <a href="/">Messages</a>
-                        </div>
-                        <div class="link-item">
-                              <i class="fa-solid fa-clock-rotate-left"></i>
-                              <a href="/">History</a>
-                        </div>
-                        <div class="link-item">
-                              <i class="fa-solid fa-clipboard"></i>
-                              <a href="/">Tasks</a>
-                        </div>
-                        <div class="link-item">
-                              <i class="fa-solid fa-people-group"></i>
-                              <a href="/">Communities</a>
-                        </div>
+                  <div class="link-item">
+                        <i class="fa-solid fa-address-card"></i>
+                        <a href="/">Profile</a>
                   </div>
-                  <div class="nav-secondary-links-container">
-                        <div class="link-item">
-                              <i class="fa-solid fa-gear"></i>
-                              <a href="/">Settings</a>
-                        </div>
-                        <div class="link-item">
-                              <i class="fa-solid fa-circle-question"></i>
-                              <a href="/">Support</a>
-                        </div>
-                        <div class="link-item">
-                              <i class="fa-solid fa-shield-halved"></i>
-                              <a href="/">Privacy</a>
-                        </div>
+                  <div class="link-item">
+                        <i class="fa-solid fa-message"></i>
+                        <a href="/">Messages</a>
                   </div>
-            </nav>
-            <section class="top-bar">
-                  <div class="top-bar-item search-bar">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" name="search-input" id="search-input" placeholder="Search...">
+                  <div class="link-item">
+                        <i class="fa-solid fa-clock-rotate-left"></i>
+                        <a href="/">History</a>
                   </div>
-                  <div class="top-bar-item user-options">
-                        <i class="fa-solid fa-bell"></i>
-                        <img class="user-options-profile-pic" src="img/blank-profile-picture.png" alt="Profile picture">
-                        <p>Sean Roberts</p>
+                  <div class="link-item">
+                        <i class="fa-solid fa-clipboard"></i>
+                        <a href="/">Tasks</a>
                   </div>
-                  <div class="top-bar-item welcome-message-container">
-                        <img clas="welcome-message-profile-pic" src="img/blank-profile-picture.png"
-                              alt="Profile picture">
-                        <div class="welcome-message">
-                              <p>Hello there,</p>
-                              <p>Sean Roberts (@sroberts)</p>
-                        </div>
+                  <div class="link-item">
+                        <i class="fa-solid fa-people-group"></i>
+                        <a href="/">Communities</a>
                   </div>
-                  <div class="top-bar-item page-options">
-                        <button type="button">New</button>
-                        <button type="button">Upload</button>
-                        <button type="button">Share</button>
+            </div>
+            <div class="nav-secondary-links-container">
+                  <div class="link-item">
+                        <i class="fa-solid fa-gear"></i>
+                        <a href="/">Settings</a>
                   </div>
-            </section>
-      </header>
-      <main>
+                  <div class="link-item">
+                        <i class="fa-solid fa-circle-question"></i>
+                        <a href="/">Support</a>
+                  </div>
+                  <div class="link-item">
+                        <i class="fa-solid fa-shield-halved"></i>
+                        <a href="/">Privacy</a>
+                  </div>
+            </div>
+      </nav>
+      <section class="top-bar">
+            <div class="top-bar-item search-bar">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                  <input type="text" name="search-input" id="search-input" placeholder="Search...">
+            </div>
+            <div class="top-bar-item user-options">
+                  <i class="fa-solid fa-bell"></i>
+                  <img class="user-options-profile-pic" src="img/blank-profile-picture.png" alt="Profile picture">
+                  <p>Sean Roberts</p>
+            </div>
+            <div class="top-bar-item welcome-message-container">
+                  <img clas="welcome-message-profile-pic" src="img/blank-profile-picture.png" alt="Profile picture">
+                  <div class="welcome-message">
+                        <p>Hello there,</p>
+                        <p>Sean Roberts (@sroberts)</p>
+                  </div>
+            </div>
+            <div class="top-bar-item page-options">
+                  <button type="button">New</button>
+                  <button type="button">Upload</button>
+                  <button type="button">Share</button>
+            </div>
+      </section>
+
+      <main class="main-content">
             <section class="user-projects">
                   <h2>Your Projects</h2>
                   <div class="project-cards-container">
@@ -155,7 +154,8 @@
                         </div>
                         <div class="announcement-item">
                               <h3 class="announcement-title">Updated Privacy Policy</h3>
-                              <p class="announcement-text">Corporate has found new ways to track what you're doing at work. Read through the update privacy policy <a href="/">here</a></p> to learn more.
+                              <p class="announcement-text">Corporate has found new ways to track what you're doing at
+                                    work. Read through the update privacy policy <a href="/">here</a></p> to learn more.
                         </div>
                   </div>
             </section>
