Fix typo in class name and misplaced closing tag

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </section>
             <section class="announcements">
                   <h2>Announcements</h2>
-                  <div class="anouncements-container">
+                  <div class="announcements-container">
                         <div class="announcement-item">
                               <h3 class="announcement-title">Site Maintenance</h3>
                               <p class="announcement-text">Site maintenance will occur at 6:00 AM each morning. Be sure
@@ -155,7 +155,7 @@
                         <div class="announcement-item">
                               <h3 class="announcement-title">Updated Privacy Policy</h3>
                               <p class="announcement-text">Corporate has found new ways to track what you're doing at
-                                    work. Read through the update privacy policy <a href="/">here</a></p> to learn more.
+                                    work. Read through the update privacy policy <a href="/">here</a> to learn more.</p>
                         </div>
                   </div>
             </section>
